# ai-qa-copilot

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  demo-artifacts.yml
app/: __init__.py  db.py  main.py  schemas.py  services.py
app/static/: styles.css
app/templates/: dashboard.html  diagnosis_report.html  interview_review.html  login.html  order_success.html  products.html
docs/: api-adapters.md  api-reference.md  application-package-zh.md  architecture.md  ci-artifacts.md  demo-flow.md  diagnosis-examples.md  github-publish.md  interview-demo-script-zh.md  interview-qa.md  interview-walkthrough-zh.md  portfolio-walkthrough.md  resume-zh.md  screenshots.md
qa_copilot/: __init__.py  artifacts.py  cli.py  diagnosis.py  junit_parser.py  pr_comment.py  prompt_builder.py  provider_health.py  providers.py  report_writer.py
reports/examples/: api-contract-failure.json  fixture-setup-failure.json  flaky-search-failure.json  playwright-visibility-failure.json  sample-ai-diagnosis.md  sample-failure.json  sample-pr-comment.md
scripts/: capture-portfolio-screenshots.ps1  verify.ps1
tests/: conftest.py  helpers.py
tests/api/: test_ai_providers_api.py  test_auth_api.py  test_diagnosis_api.py  test_orders_api.py  test_products_api.py  test_provider_health_api.py  test_web_pages.py
tests/e2e/: test_shop_flow.py
tests/unit/: test_artifacts.py  test_cli.py  test_db.py  test_diagnosis.py  test_docs.py  test_example_artifacts.py  test_junit_parser.py  test_pr_comment.py  test_prompt_builder.py  test_provider_health.py  (+3 more)
(+1 files in other folders)
