[project]
name = "ai-qa-copilot"
version = "0.1.0"
description = "AI-powered QA automation portfolio project"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.8.0",
  "openai>=1.40.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-html>=4.1.0",
  "pytest-cov>=5.0.0",
  "playwright>=1.45.0",
  "pytest-playwright>=0.5.0",
  "ruff>=0.5.0",
]

[project.scripts]
qa-copilot = "qa_copilot.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --strict-markers --html=reports/latest/pytest-report.html --self-contained-html"
markers = [
  "e2e: browser-based end-to-end tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.setuptools.packages.find]
include = ["app*", "qa_copilot*"]
exclude = ["docs*", "outputs*", "reports*", "tests*", "work*"]
